fix: Update background gradient classes for dark mode in Countdown and Home components

--- a/lessons/lesson_12_RTK/code/my-rtk-counter/src/index.css
+++ b/lessons/lesson_12_RTK/code/my-rtk-counter/src/index.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@custom-variant dark (&:where(.dark, .dark *));
 
 @font-face {
 font-family: 'MerryChristmasFlake';
@@ -42,6 +43,28 @@ html.dark body {
 .dark ::-webkit-scrollbar-thumb:hover {
   background: #9CA3AF;
 }
+
+/* .cr-bg {
+  position: relative;
+  overflow: hidden;
+}
+
+.cr-bg::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-image: url("../public/images/merry-christmas-bg.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  filter: blur(8px);
+  z-index: 0;
+}
+
+.cr-bg > * {
+  position: relative;
+  z-index: 1;
+} */
 
 /* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
